Fix blockquote footer not showing for tmpl other than articles

--- a/assets/css/text-section.css
+++ b/assets/css/text-section.css
@@ -56,10 +56,6 @@
 	margin-top: 2rem;
 }
 
-.text-section__kblockquote-footer {
-	margin-top: 1rem;
-}
-
 .text-section__hr::after {
 	display: block;
 	content: "⁂";
